[package]
name = "mockforge-collab"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "README.md"
keywords.workspace = true
categories.workspace = true
description = "Cloud collaboration features for MockForge - team workspaces, real-time sync, and version control"

[lints]
workspace = true

[dependencies]
# Core dependencies
mockforge-core = { path = "../mockforge-core", version = "0.1.3" }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }

# Async runtime
tokio = { workspace = true, features = ["full"] }
futures = { workspace = true }
async-trait = { workspace = true }

# Logging
tracing = { workspace = true }

# HTTP/web framework for collaboration API
axum = { workspace = true, features = ["ws", "macros"] }
tower = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"] }

# WebSocket for real-time sync
tokio-tungstenite = "0.24"

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utility libraries
uuid = { workspace = true, features = ["v4", "serde"] }
chrono = { workspace = true, features = ["serde"] }
url = { workspace = true }

# Authentication & authorization
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
blake3 = { workspace = true }

# Database for persistence (SQLite for self-hosted, PostgreSQL support)
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid", "json", "migrate"] }

# Concurrency
parking_lot = { workspace = true }
dashmap = "6.1"

# Conflict resolution
similar = "2.6"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3.13"

[features]
default = ["sqlite"]
sqlite = []
postgres = []
cloud = []
