[package]
name = "mockforge-contracts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Contract testing, drift detection, and incident management for MockForge"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme = "../../README.md"
keywords = ["contracts", "testing", "drift", "mock"]
categories = ["development-tools"]

[dependencies]
mockforge-foundation = { path = "../mockforge-foundation" }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
hmac = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"
openapiv3 = { workspace = true }

[features]
default = []
ai = []  # gates semantic_manager LLM usage in incidents
schema = []

[lints]
workspace = true
