[package]
name = "mockforge-data"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Data generator for MockForge - faker + RAG synthetic data engine"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["faker", "data-generation", "synthetic-data", "testing", "mock"]
categories = ["development-tools::testing", "data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
fake = { version = "3.0", features = ["derive", "http", "chrono", "uuid", "random_color"] }
fastrand = "2.0"
itertools = { workspace = true }
mockforge-core = { path = "../mockforge-core" }
reqwest = { workspace = true }
async-trait = "0.1"

# For vector operations and similarity calculations
ndarray = "0.15"
ndarray-stats = "0.5"
