[package]
name = "mockforge-ftp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "FTP protocol support for MockForge"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["ftp", "file-transfer", "mock", "testing"]
categories = ["development-tools::testing", "network-programming"]

[dependencies]
mockforge-core = { version = "0.2.4", path = "../mockforge-core" }
libunftp = "0.21"
tokio = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
 serde_yaml = { workspace = true }
tracing = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
 clap = { version = "4.0", features = ["derive"] }
 handlebars = "6.0"
 uuid = { version = "1.0", features = ["v4"] }
 mime_guess = { workspace = true }

[[bench]]
name = "ftp_benchmarks"
harness = false

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tempfile = "3"
suppaftp = "5.3"  # FTP client for testing
criterion = { version = "0.5", features = ["html_reports"] }
