[package]
name = "mockforge-graphql"
version = "0.3.6"
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "GraphQL protocol support for MockForge"
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords = ["graphql", "api", "mock", "testing", "schema"]
categories = ["development-tools::testing", "web-programming"]

[lints.rust]
missing_docs = "deny"

[dependencies]
# GraphQL implementation - simplified for basic functionality
async-graphql = { version = "7.0", features = ["apollo_tracing"] }
async-graphql-axum = "7.0"

# Workspace dependencies
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
rand = { workspace = true }
indexmap = "2.2"
notify = "7.0"
parking_lot = { workspace = true }

# MockForge core
mockforge-core = "0.3.6"
mockforge-observability = "0.3.6"
mockforge-tracing = "0.3.6"
opentelemetry = { version = "0.22", features = ["trace"] }

# Optional data generation support
mockforge-data = { version = "0.3.6", optional = true }

[features]
default = ["data-faker"]
data-faker = ["mockforge-data"]

[dev-dependencies]
tokio = { version = "1.48", features = ["macros", "rt-multi-thread"] }
tower = { workspace = true }
opentelemetry_sdk = "0.22"
tempfile = "3.8"
