[package]
name = "mockforge-grpc"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tokio-stream = "0.1"
tonic = "0.14"
tonic-prost = "0.14"
tonic-reflection = "0.14"
tonic-health = "0.14"
prost = "0.14"
prost-reflect = "0.14"
prost-types = "0.14"
http = "1.0"
futures = "0.3"
futures-util = "0.3"
rand = "0.8"
once_cell = "1.19"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
mockforge-core = { path = "../mockforge-core" }
mockforge-data = { path = "../mockforge-data", optional = true }
fake = { version = "3.0", optional = true }
regex = "1.0"
chrono = { workspace = true }
tempfile = "3.0"

[build-dependencies]
tonic-prost-build = "0.14"

[features]
default = ["data-faker"]
data-faker = ["mockforge-data", "fake"]

[[example]]
name = "flexible_grpc"
path = "examples/flexible_grpc.rs"

[[example]]
name = "advanced_data_synthesis"
path = "examples/advanced-data-synthesis.rs"
